@@ -1,5 +1,8 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o Fixed a crash (NULL pointer dereference) in PortList::isTCPwrapped when using
+  -sV and -O on an unknown service not listed in nmap-services. [Pierre Lalet]
+
 o Fixed a benign TOCTOU race between stat() and open() in mmapfile().
   Reported by Camille Mougey. [Henri Doreau]
 
